Модальне вікно design
Створення html розмітки і перенесення класів css

--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1117,3 +1117,19 @@ footer {
 		}
 	}
 }
+.popup-design {
+	&__body {
+	}
+
+	&__title {
+	}
+
+	&__input {
+	}
+
+	&__button {
+	}
+
+	&__upload {
+	}
+}
