--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -85,11 +85,13 @@ $btn-Color-1: #2b5ebd;
 $btn-Color-2: #3c77c5;
 $btn-BorderColor: #2158a0;
 $btn-ShadowColor: #2158a075;
+$popup-bgColor: rgba(43, 108, 194, 0.692);
+$grey-color: rgb(245, 245, 245);
 
 /*---------Variables---------------*/
 body {
 	font-family: "Comfortaa", sans-serif;
-	background-color: rgb(245, 245, 245);
+	background-color: $grey-color;
 	overflow-x: hidden;
 }
 
@@ -1117,19 +1119,76 @@ footer {
 		}
 	}
 }
-.popup-design {
-	&__body {
-	}
 
+.popup {
+	position: fixed;
+	z-index: 3;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: $popup-bgColor;
+	&__body {
+		background-color: $grey-color;
+		border-radius: 6px;
+		padding: 40px;
+		text-align: center;
+		position: absolute;
+		left: 50%;
+		transform: translate(-50%, 0%);
+	}
 	&__title {
+		padding-top: 5px;
+		font-weight: 600;
+		letter-spacing: 0.9px;
+	}
+	&__inputs {
+		background-color: $grey-color;
 	}
 
 	&__input {
+		text-align: center;
+		margin: 0 auto;
+		display: flex;
+		&:first-child {
+			margin-top: 40px;
+		}
+		border-radius: 50px;
+		background-color: white;
+		border: none;
+		padding: 18px 32px;
+		box-shadow: 8px 6px 20px rgba(0, 0, 0, 0.253);
+		margin-bottom: 10px;
 	}
 
 	&__button {
+		margin-top: 40px;
 	}
 
+	&__close {
+		position: absolute;
+		top: 8px;
+		right: 8px;
+	}
+}
+.popup-design {
+	display: none;
+
 	&__upload {
+		padding-top: 20px;
+		.upload-span {
+			display: block;
+		}
+	}
+	&__body {
+		top: 10%;
+	}
+}
+
+.popup-consultation {
+	display: none;
+
+	&__body {
+		top: 20%;
 	}
 }
