--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -174,6 +174,32 @@ body {
 	justify-content: space-between;
 	align-items: center;
 
+	&__burger {
+		background: linear-gradient(to right, $btn-Color-1, $btn-Color-2);
+		padding: 12px 16px;
+		cursor: pointer;
+		display: none;
+	}
+	.burger-list {
+		display: none;
+		position: absolute;
+		top: 58px;
+		left: 0px;
+		background-color: $bg-Color;
+		border: 3px solid $bg-ColorDarker;
+		&__item {
+			display: flex;
+			a {
+				padding: 30px 40px;
+				width: 100%;
+				color: black;
+				border: 3px solid $bg-ColorDarker;
+			}
+			a:hover {
+				background-color: $bg-ColorDarker;
+			}
+		}
+	}
 	&__catalog {
 		padding: 22px 12px;
 		background: linear-gradient(to right, $btn-Color-1, $btn-Color-2);
@@ -247,7 +273,6 @@ body {
 	pointer-events: all;
 }
 /*---------*/
-
 .head {
 	padding-top: 50px;
 	display: flex;
