--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -201,11 +201,11 @@ body {
 		}
 	}
 	&__catalog {
-		padding: 22px 12px;
+		padding: 22px 42px;
 		background: linear-gradient(to right, $btn-Color-1, $btn-Color-2);
 		color: white;
-		font-weight: 400;
-		letter-spacing: 0.7px;
+		font-weight: 700;
+		letter-spacing: 0.99px;
 		border-radius: 1px;
 	}
 	&__catalog p {
@@ -256,8 +256,8 @@ body {
 	}
 	&__button {
 		button {
-			padding: 16px 44px;
-			border-radius: 50px;
+			padding: 20px 44px;
+			border-radius: 14px 0px 0px 14px;
 			background: linear-gradient(to right, $btn-Color-1, $btn-Color-2);
 			color: white;
 			border: 1px solid $btn-BorderColor;
