--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -274,7 +274,7 @@ body {
 }
 /*---------*/
 .head {
-	padding-top: 50px;
+	padding: 50px 30px 0px 30px;
 	display: flex;
 	justify-content: space-between;
 	&__company {
@@ -315,6 +315,7 @@ body {
 
 .welcome {
 	margin-top: 60px;
+	padding: 0px 30px 0px 30px;
 	display: flex;
 	justify-content: space-between;
 	min-height: 78vh;
