перероблений дизайн бургер меню

--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -175,8 +175,9 @@ body {
 	align-items: center;
 
 	&__burger {
-		background: linear-gradient(to right, $btn-Color-1, $btn-Color-2);
+		background: linear-gradient(to right, $btn-Color-2, $btn-Color-1);
 		padding: 12px 16px;
+		border-radius: 0px 14px 14px 0px;
 		cursor: pointer;
 		display: none;
 	}
