--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -116,6 +116,10 @@
 }
 //section---------.portfolio-----------
 
+//section---------.best-present-----------
+
+//section---------.best-present-----------
+
 //section---------.sizes-----------
 @media (max-width: 853px) {
 	.sizes {
