--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -122,7 +122,82 @@
 //section---------.portfolio-----------
 
 //section---------.best-present-----------
-
+@media (max-width: 1112px) {
+	.best-present {
+		background: #f8e6fc;
+		padding: 40px 0px;
+		max-height: unset;
+		&__body {
+			position: unset;
+		}
+		&__title {
+			padding: 0px;
+			text-align: center;
+		}
+		&__subtitle {
+			padding: 26px 0px 0px 0px;
+			text-align: center;
+		}
+		&__description {
+			margin: 0 auto;
+			text-align: center;
+			width: 80%;
+			padding: 58px 0px 0px 0px;
+		}
+		&__items {
+			padding: 64px 20px 10px 0px;
+			width: 100%;
+		}
+	}
+}
+@media (max-width: 606px) {
+	.best-present {
+		&__title {
+			padding: 0px 20px 0px 20px;
+			font-size: 1.2rem;
+		}
+		&__subtitle {
+			padding: 16px 20px 0px 20px;
+			font-size: 1.6rem;
+		}
+		&__description {
+			padding: 38px 0px 0px 0px;
+		}
+		&__items {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+}
+@media (max-width: 445px) {
+	.best-present {
+		&__title {
+			padding: 0px 20px 0px 20px;
+			font-size: 1.5rem;
+			font-weight: 700;
+		}
+		&__subtitle {
+			padding: 6px 20px 0px 20px;
+			font-size: 1.1rem;
+			font-weight: 400;
+		}
+		&__description {
+			padding: 28px 0px 0px 0px;
+			font-size: 0.8rem;
+		}
+	}
+}
+@media (max-width: 445px) {
+	.best-present {
+		padding: 40px 0px 30px 0px;
+		&__title {
+			font-size: 1.2rem;
+		}
+		&__subtitle {
+			font-size: 1rem;
+		}
+	}
+}
 //section---------.best-present-----------
 
 //section---------.sizes-----------
