--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -316,10 +316,9 @@ body {
 
 .welcome {
 	margin-top: 60px;
-	padding: 0px 30px 0px 30px;
+	padding: 0px 30px 50px 30px;
 	display: flex;
 	justify-content: space-between;
-	min-height: 78vh;
 	&__sliders {
 		flex: 1.3;
 	}
@@ -330,8 +329,10 @@ body {
 			height: 90%;
 		}
 	}
-
+	&__slider-1 {
+	}
 	&__slider-2 {
+		display: none;
 		padding-left: 100px;
 		img {
 			width: 280px;
@@ -377,7 +378,7 @@ body {
 	&__order-description {
 		margin-top: 50px;
 		color: $btn-Color-1;
-		font-size: 0.86rem;
+		font-size: 0.8rem;
 		font-weight: 400;
 	}
 
