--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -400,7 +400,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	&__photo {
-		flex: 1;
+		width: 45%;
 		position: relative;
 		margin-right: 30px;
 		img {
@@ -416,7 +416,7 @@ body {
 	&__description {
 		min-height: 500px;
 		padding-top: 100px;
-		flex: 1.3;
+		width: 55%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
