--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -441,21 +441,25 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top: 180px;
+	margin-top: 120px;
+	&__title {
+		text-align: center;
+	}
 
 	&__subtitle {
-		margin-top: 30px;
+		margin-top: 20px;
 		letter-spacing: 1px;
 	}
 	&__row-1 {
-		margin-top: 70px;
+		margin: 50px 20px 0px 20px;
 	}
 
 	.styles__row-2 {
 		display: none;
+		margin: 0px 20px 0px 20px;
 	}
 	&__button {
-		margin-top: 80px;
+		margin-top: 50px;
 		img {
 			margin-right: 7px;
 		}
