--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -934,7 +934,7 @@ body {
 	&__item {
 		display: flex;
 		justify-content: space-between;
-		padding: 100px;
+		padding: 80px 100px 140px 100px;
 	}
 
 	&__image {
@@ -959,7 +959,7 @@ body {
 		transform: translate(-50%, 0);
 		button {
 			min-width: 200px;
-			padding-right: 16px;
+			padding: 16px 16px 16px 24px;
 			span {
 				position: absolute;
 				z-index: 2;
@@ -973,7 +973,9 @@ body {
 	}
 
 	&__body {
-		flex: 2;
+		display: flex;
+		flex-direction: column;
+		flex: 1.5;
 		margin-left: 80px;
 		text-align: center;
 		line-height: 26px;
