--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -1124,6 +1124,100 @@
 }
 //section---------.questions-----------
 
+//section---------.design-----------
+@media (max-width: 946px) {
+	.design {
+		padding: 80px 20px;
+	}
+}
+@media (max-width: 823px) {
+	.design {
+		padding: 40px 20px 60px 20px;
+		flex-direction: column;
+		align-items: center;
+		&__image {
+			width: 50%;
+		}
+		&__title {
+			font-size: 1.7rem;
+			font-weight: 700;
+		}
+		&__subtitle {
+			font-size: 1.3rem;
+			font-weight: 400;
+			padding-top: 10px;
+		}
+		&__button {
+			padding-top: 30px;
+		}
+	}
+}
+@media (max-width: 664px) {
+	.design {
+		&__image {
+			width: 60%;
+		}
+		&__title {
+			font-size: 1.5rem;
+			padding-top: 50px;
+		}
+		&__subtitle {
+			font-size: 1.1rem;
+			padding-top: 20px;
+			line-height: 20px;
+		}
+		&__button {
+			padding-top: 30px;
+		}
+	}
+}
+@media (max-width: 461px) {
+	.design {
+		padding: 40px 20px 40px 20px;
+		&__image {
+			width: 70%;
+		}
+		&__title {
+			font-size: 1.3rem;
+			padding-top: 30px;
+		}
+		&__subtitle {
+			font-size: 1rem;
+			padding-top: 20px;
+			line-height: 20px;
+		}
+		&__button {
+			padding-top: 30px;
+			button {
+				font-size: 0.8rem;
+			}
+		}
+	}
+}
+@media (max-width: 349px) {
+	.design {
+		&__image {
+			width: 75%;
+		}
+		&__title {
+			font-size: 1.2rem;
+			padding-top: 30px;
+		}
+		&__subtitle {
+			font-size: 0.95rem;
+			padding-top: 10px;
+			line-height: 20px;
+		}
+		&__button {
+			padding-top: 30px;
+			button {
+				font-size: 0.76rem;
+			}
+		}
+	}
+}
+//section---------.design-----------
+
 //section---------.consultation-----------
 @media (max-width: 826px) {
 	.consultation {
