--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -1386,6 +1386,7 @@
 //-------------footer---------------
 
 //-------------.popup-design---------------
+//-------------.popup-consultation---------------
 @media (max-height: 650px) {
 	.popup-design {
 		.popup__input {
@@ -1413,44 +1414,71 @@
 		}
 	}
 }
-@media (max-width: 361px) {
+@media (max-width: 375px) {
 	.popup-design {
 		.popup__body {
-			padding: 30px 30px 40px 30px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			background-color: rgba(255, 255, 255, 0.84);
+			border-radius: 0px;
+			padding-top: 0px;
 		}
 		.popup__input {
-			padding: 14px 12px;
+			padding: 14px 30px;
 		}
 		.popup__button {
 			button {
-				padding: 14px 20px;
+				padding: 14px 36px;
 				font-size: 0.9rem;
 			}
 		}
+		.popup__close {
+			top: 14px;
+			right: 18px;
+		}
 		&__upload {
 			button {
-				padding: 12px 12px;
+				padding: 12px 16px;
 				font-size: 1rem;
 			}
 		}
+		.popup__inputs {
+			background-color: transparent;
+		}
 	}
-}
-//-------------.popup-design---------------
-
-//-------------.popup-consultation---------------
-@media (max-width: 359px) {
 	.popup-consultation {
 		.popup__input {
 			padding: 18px 26px;
 		}
 		.popup__body {
-			padding: 30px 20px 40px 30px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			background-color: rgba(255, 255, 255, 0.84);
+			border-radius: 0px;
 		}
 		.popup__title {
-			font-size: 1.1rem;
+			font-size: 1.2rem;
+		}
+		.popup__inputs {
+			background-color: transparent;
+		}
+		.popup__close {
+			top: 14px;
+			right: 14px;
 		}
 	}
 }
+//-------------.popup-design---------------
 //-------------.popup-consultation---------------
 
 //-------------.burger-list---------------
